--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <header class="header">
     <nav class="navbar">
       <a href="#" class="navbar-brand">
-        <img src="images/logo.png" alt="Vishcart Logo" class="logo">
+        <img src="IMG-20241125-WA0003.jpg" alt="Divine Logo" class="logo">
       </a>
       <ul class="navbar-nav">
         <li class="nav-item"><a href="#">Home</a></li>
